Inclusão de internacionalização

--- a/src/main/webapp/agendamentos.html
+++ b/src/main/webapp/agendamentos.html
@@ -57,10 +57,10 @@
                         </a>
 
                         <ul class="aw-menu__list  aw-menu__list--sublist">
-                            <li class="aw-menu__item  aw-menu__item--link  is-active" id="menu-esq-link-cadastro">
+                            <li class="aw-menu__item  aw-menu__item--link  is-active" id="menu-esq-link-cadastro-id">
                                 <!--                                <a href="#">Cadastro de agendamentos</a>-->
                             </li>
-                            <li class="aw-menu__item  aw-menu__item--link  is-active" id="menu-esq-link-listar">
+                            <li class="aw-menu__item  aw-menu__item--link  is-active" id="menu-esq-link-listar-id">
                                 <!--                                <a href="#">Listar agendamentos</a>-->
                             </li>
                         </ul>
